# RubHew-MobileAppProject

./: .env_example  .gitignore  .testing.env  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  testdb.py
RubHew/: requirement.txt
RubHew/RubHew/: .env  .env_example  config.py  deps.py  main.py  security.py
RubHew/RubHew/models/: __init__.py  user.py
RubHew/RubHew/router/: __init__.py  root.py  users.py
RubHew/RubHew/routers/: authentication.py  root.py  users.py
RubHew/models/: __init__.py
RubHew/routers/: __init__.py
RubHew/scripts/: run-api
rubhew/: config.py  deps.py  main.py
rubhew/models/: __init__.py  items.py  profiles.py  requests.py  transactions.py  users.py
rubhew/routers/: __init__.py  categories.py  items.py  profiles.py  requests.py  tags.py  transactions.py  users.py
scripts/: init_test_db.py  initdb.py  run-api  run-api.bat  run-test  run-test.bat  testdb.py
tests/: conftest.py  test_categories.py  test_items.py  test_requests.py  test_root.py  test_tags.py  test_user.py
